# wybe-voice-no

./: .env.example  .gitignore  Dockerfile.runpod  pyproject.toml
.github/workflows/: build-runpod-image.yml
scripts/: runpod_post_start.sh  runpod_setup.sh  runpod_startup.sh
server/: __main__.py  app.py  audio.py  config.py  pipeline.py  protocol.py
server/models/: asr.py  llm.py  manager.py  tts.py  vad.py
static/: app.js  index.html
